--- a/src/main/resources/templates/recepcion/templateRecepcion.html
+++ b/src/main/resources/templates/recepcion/templateRecepcion.html
@@ -24,9 +24,9 @@
                         alt="equipos">
                     Equipos
                 </a>
-                <a th:href="@{/usuario/Perfil}"><img class="icono-header" th:src="@{/iconos/reparaciones.png}"
+                <a th:href="@{/orden/ordenes}"><img class="icono-header" th:src="@{/iconos/reparaciones.png}"
                         alt="reparacion">
-                    Reparaciones
+                    Ordenes
                 </a>
                 <!-- Usuario con dropdown -->
                 <div class="usersession">
