--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -640,9 +640,9 @@ a {
     height: 200px;
     border-radius: 10px;
     overflow: hidden;
-    gap: 20px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    gap: 10px;
+    margin-top: 20px;
+    /* margin-bottom: 30px; */
     text-align: left;
 }
 
@@ -655,8 +655,8 @@ a {
 .card-foto img {
     width: 100px;
     height: 100px;
-    border-radius: 50%;
-    margin-top: 30px;
+    border-radius: 10px;
+    margin-top: 50px;
 }
 
 .dos-columnas {
