--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -295,6 +295,12 @@ a {
     position: relative;
 }
 
+.formulario-grupo-input select {
+    width: 100%;
+    height: 45px;
+    border-radius: 3px;
+}
+
 .formulario-input {
     width: 100%;
     background: #fff;
