--- a/src/main/resources/templates/clientes/mostrar.html
+++ b/src/main/resources/templates/clientes/mostrar.html
@@ -76,6 +76,14 @@
                                     <img class="w25" th:src="@{/iconos/menu-blanco.png}" alt="menu-blanco"> Ver Equipos
                                 </button>
                             </form>
+
+                            <!-- Formulario para ver todas las ordenes del cliente -->
+                            <form th:action="@{/orden/ordenCliente}" method="post" style="display: inline;">
+                                <input type="hidden" name="clienteId" th:value="${cliente.IdCliente}">
+                                <button type="submit" class="btn btn-dark" style="color: white;">
+                                    <img class="w25" th:src="@{/iconos/reparando-blanco.png}" alt="reparando-blanco"> Ver Ordenes
+                                </button>
+                            </form>
                             <!-- <a class="btn btn-dark" style="color: white;" th:href="@{/recepcion/altaEquipo}"><img
                                     class="w25" th:src="@{/iconos/alta.png}" alt="alta">
                                 Alta Equipo
